--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgb(138 140 145 / 35%);
+  z-index: 2;
 
   .nav-elements {
     list-style: none;
