--- a/styles/components/_imageCarousel.scss
+++ b/styles/components/_imageCarousel.scss
@@ -1,8 +1,43 @@
 .carousel {
   max-height: 100vh;
-
-  button {
-    display: none;
+  .arrow_right {
+    position: absolute;
+    right: 80px;
+    top: 48%;
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    padding: 20px;
+    opacity: 0.1;
+    z-index: 1;
+  }
+  .fa-chevron-right:hover {
+    background-color: #ffffffbd;
+    color: #63636396;
+    transition: 0.6s;
+    opacity: 1;
+    cursor: pointer;
+  }
+  .arrow_left {
+    position: absolute;
+    left: 80px;
+    top: 48%;
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    padding: 20px;
+    opacity: 0.1;
+    z-index: 1;
+  }
+  .fa-chevron-left:hover {
+    background-color: #ffffffbd;
+    color: #63636396;
+    transition: 0.6s;
+    opacity: 1;
   }
   .img-carousel {
     animation: zoom 5s linear infinite;
