ajout des cards, modification de la navabar concernant le contraste, style des card dans portfolio

--- a/styles/components/_imageCarousel.scss
+++ b/styles/components/_imageCarousel.scss
@@ -42,6 +42,7 @@
     opacity: 1;
   }
   .img-carousel {
+    object-fit: cover;
     animation: zoom 5s linear infinite;
     @keyframes zoom {
       0% {
