--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,3 +3,5 @@
 @import "./setting";
 @import "./components/imageCarousel";
 @import "./components/dynamicText";
+@import "./pages/portfolio";
+@import "./components/card";
