--- a/styles/_setting.scss
+++ b/styles/_setting.scss
@@ -6,3 +6,8 @@ body {
   font-family: "Lato", sans-serif;
   background-color: #f5f5f5;
 }
+
+a {
+  text-decoration: none;
+  color: rgb(28, 2, 0);
+}
