--- a/styles/components/_dynamicText.scss
+++ b/styles/components/_dynamicText.scss
@@ -28,6 +28,9 @@
           transform: translate(-50%);
           animation: cursor 1s infinite;
         }
+        .highlight {
+          color: #7a0a00f0;
+        }
         @keyframes cursor {
           0% {
             opacity: 1;
