--- a/styles/_setting.scss
+++ b/styles/_setting.scss
@@ -5,6 +5,9 @@ body {
   margin: 0;
   font-family: "Lato", sans-serif;
   background-color: #f5f5f5;
+  @media (max-width: 992px) {
+    overflow: auto;
+  }
 }
 
 a {
