--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -2,6 +2,7 @@
   background: rgb(229 203 159 / 55%);
   margin-top: 0;
 }
+
 .card_container {
   display: flex;
   flex-wrap: wrap;
@@ -32,19 +33,23 @@
       margin-right: 10px;
       margin-bottom: 5px;
     }
+
     .techno {
       width: 20px;
       height: 20px;
     }
   }
+
   a {
     text-decoration: none;
   }
+
   .card_img {
     object-fit: cover;
     width: 100%;
     border-bottom: 1px solid #dedede;
   }
+
   .card_title {
     background-color: #e74c3cd4;
     text-align: center;
@@ -61,5 +66,31 @@
     margin-left: 5px;
     margin-right: 5px;
     padding: 2px;
+  }
+
+  @media (max-width: 1200px) {
+    .card {
+      width: calc(33.33% - 120px);
+    }
+  }
+
+  @media (max-width: 992px) {
+    .card {
+      width: calc(50% - 80px);
+    }
+  }
+
+  @media (max-width: 768px) {
+    .card {
+      width: calc(50% - 40px);
+      margin: 10px 20px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .card {
+      width: calc(100% - 40px);
+      margin: 10px 20px;
+    }
   }
 }
