--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -29,6 +29,7 @@
     a:hover {
       color: #7a0a00f0;
     }
+
     a::before {
       content: "";
       position: absolute;
@@ -45,6 +46,7 @@
       width: 100%;
       opacity: 1;
     }
+
     li.active {
       a {
         color: #7a0a00f0;
@@ -52,6 +54,42 @@
           width: 100%;
           opacity: 1;
         }
+      }
+    }
+  }
+  // Media Queries
+  @media (max-width: 768px) {
+    .nav-elements {
+      font-size: 1.2rem;
+
+      :not(:last-child) {
+        margin-right: 30px;
+      }
+    }
+  }
+
+  @media (max-width: 480px) {
+    .nav-elements {
+      font-size: 1rem;
+
+      :not(:last-child) {
+        margin-right: 20px;
+      }
+    }
+  }
+
+  @media (max-width: 360px) {
+    height: auto;
+    flex-direction: column;
+    padding: 10px 0;
+
+    .nav-elements {
+      flex-direction: column;
+      align-items: center;
+
+      :not(:last-child) {
+        margin-right: 0;
+        margin-bottom: 10px;
       }
     }
   }
