--- a/styles/pages/_contact.scss
+++ b/styles/pages/_contact.scss
@@ -120,4 +120,31 @@
       font-size: 12px;
     }
   }
+  @media (max-width: 1024px) {
+    flex-direction: column;
+    align-items: center;
+
+    .form-container {
+      margin-right: 0;
+      margin-bottom: 30px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .form-container {
+      width: 80%;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .form-container {
+      width: 100%;
+      padding: 20px;
+    }
+    .contact-infos {
+      .infos {
+        margin-left: 20px;
+      }
+    }
+  }
 }
