--- a/styles/pages/_portfolio.scss
+++ b/styles/pages/_portfolio.scss
@@ -16,6 +16,7 @@
     margin-bottom: 5px;
     margin-top: 5px;
   }
+
   .subtitle_portfolio {
     color: #939393;
     margin-top: 0;
@@ -30,6 +31,27 @@
       width: 4px;
       background: #e74c3c;
       transform: rotate(90deg);
+    }
+  }
+
+  // Media Queries
+  @media (max-width: 768px) {
+    .header_portfolio {
+      font-size: 1.2rem;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .header_portfolio {
+      font-size: 1rem;
+    }
+  }
+
+  @media (max-width: 360px) {
+    .subtitle_portfolio {
+      &::after {
+        height: 60px;
+      }
     }
   }
 }
