--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -17,7 +17,7 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    margin: 10px 40px;
+    margin: 10px 40px 20px;
     transition: transform 0.3s ease-in-out;
 
     &:hover {
