--- a/styles/_setting.scss
+++ b/styles/_setting.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
 
 body {
-  overflow: auto;
+  overflow: hidden;
   margin: 0;
   font-family: "Lato", sans-serif;
   background-color: #f5f5f5;
