--- a/styles/components/_imageCarousel.scss
+++ b/styles/components/_imageCarousel.scss
@@ -1,8 +1,8 @@
 .carousel {
   max-height: 100vh;
 
-  .arrow_left,
-  .arrow_right {
+  #arrow_left,
+  #arrow_right {
     position: absolute;
     font-size: 30px;
     color: white;
@@ -15,18 +15,20 @@
     cursor: pointer;
   }
 
-  .arrow_left {
+  #arrow_left {
+    height: 80px;
     left: 80px;
     top: 48%;
   }
 
-  .arrow_right {
+  #arrow_right {
     right: 80px;
+    height: 80px;
     top: 48%;
   }
 
-  .fa-chevron-right:hover,
-  .fa-chevron-left:hover {
+  #arrow_right:hover,
+  #arrow_left:hover {
     background-color: #ffffffbd;
     color: #63636396;
     transition: 0.6s;
