--- a/styles/pages/_contact.scss
+++ b/styles/pages/_contact.scss
@@ -107,11 +107,13 @@
       .icon {
         color: #e74c3c;
         margin-right: 10px;
+        height: 20px;
       }
     }
     .social {
       color: #e74c3c;
       margin-right: 10px;
+      height: 20px;
     }
     .infos {
       margin-top: 5px;
