--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -26,6 +26,8 @@
     color: #e74c3cd4;
     position: absolute;
     cursor: pointer;
+    height: 50px;
+    width: 20px;
     z-index: 10;
   }
 
