--- a/styles/components/_imageCarousel.scss
+++ b/styles/components/_imageCarousel.scss
@@ -70,17 +70,18 @@
   }
 
   @media (max-width: 480px) {
-    .arrow_left,
-    .arrow_right {
+    #arrow_left,
+    #arrow_right {
       font-size: 16px;
+      height: 30px;
       padding: 8px;
     }
 
-    .arrow_left {
+    #arrow_left {
       left: 20px;
     }
 
-    .arrow_right {
+    #arrow_right {
       right: 20px;
     }
   }
