--- a/styles/components/_dynamicText.scss
+++ b/styles/components/_dynamicText.scss
@@ -18,7 +18,7 @@
       .job {
         margin: 0;
         font-size: 5rem;
-        color: #f1f1f1ed;
+        color: #6e0000;
         &::after {
           content: "";
           position: absolute;
