--- a/styles/components/_imageCarousel.scss
+++ b/styles/components/_imageCarousel.scss
@@ -35,11 +35,30 @@
     opacity: 1;
   }
 
-  .img-carousel {
+  .img-container {
+    position: relative;
     width: 100vw;
     height: 100vh;
-    object-fit: cover;
-    animation: zoom 5s linear infinite;
+
+    .carousel-image {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      animation: zoom 5s linear infinite;
+      z-index: 1;
+    }
+
+    .img-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.35);
+      z-index: 0;
+    }
+
     @keyframes zoom {
       0% {
         transform: scale(1);
