--- a/styles/pages/_about.scss
+++ b/styles/pages/_about.scss
@@ -31,8 +31,10 @@
   .paragraphe {
     display: flex;
     justify-content: space-evenly;
+    line-height: 22px;
+    word-spacing: 2px;
     margin-top: 50px;
-    color: #939393;
+    color: #636363;
 
     .t-left,
     .t-right {
