--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -77,6 +77,7 @@
     max-height: 479px;
     border-bottom: 1px solid #dedede;
   }
+
   .top-container {
     display: flex;
     background-color: #e74c3cd4;
@@ -123,6 +124,14 @@
 
   .card {
     width: 100%;
+    .top-container {
+      .card_title {
+        font-size: 15px;
+      }
+      .link-icon {
+        font-size: 12px;
+      }
+    }
   }
 }
 
@@ -130,10 +139,18 @@
   .card_container {
     width: 100%;
   }
-
   .card {
     width: 100%;
     margin: 10px 20px;
+    .top-container {
+      .card_title {
+        font-size: 15px;
+        margin-right: 10px;
+      }
+      .link-icon {
+        font-size: 12px;
+      }
+    }
   }
 }
 
@@ -141,22 +158,36 @@
   .card_container {
     width: 100%;
   }
-
   .card {
     width: 100%;
     margin-left: 0;
-
-    .card_title {
-      font-size: 13px;
+    height: 28vh;
+    .top-container {
+      .card_title {
+        font-size: 15px;
+        margin-right: 0;
+      }
+      .link-icon {
+        display: none;
+      }
+    }
+    .card_img {
+      height: 70px;
     }
     .description {
-      font-size: 10px;
+      font-size: 8px;
+    }
+    .techno-container {
+      .techno {
+        width: 12px;
+        height: 12px;
+      }
     }
   }
   .prev {
-    margin-left: 20px;
+    margin-left: 10px;
   }
   .next {
-    margin-right: 20px;
+    margin-right: 10px;
   }
 }
