--- a/styles/components/_imageCarousel.scss
+++ b/styles/components/_imageCarousel.scss
@@ -40,7 +40,7 @@
     width: 100vw;
     height: 100vh;
 
-    .carousel-image {
+    .img-carousel {
       position: relative;
       width: 100%;
       height: 100%;
@@ -53,10 +53,10 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
       background-color: rgba(0, 0, 0, 0.35);
-      z-index: 0;
+      z-index: 2; /* Changed from 0 to 2 */
     }
 
     @keyframes zoom {
