--- a/styles/components/_dynamicText.scss
+++ b/styles/components/_dynamicText.scss
@@ -11,7 +11,7 @@
 
     .name {
       margin-bottom: 5px;
-      color: #e5e5e5;
+      color: #ffffff;
     }
 
     .job-container {
@@ -50,12 +50,22 @@
     }
   }
 
-  // Media Queries
-  @media (max-width: 768px) {
+  @media (max-width: 820px) {
     .title {
       .job-container {
         .job {
-          font-size: 3.5rem;
+          font-size: 2.5rem;
+          &::after {
+            content: "";
+            position: absolute;
+            height: 25px;
+            width: 1px;
+            background: #dadada;
+            right: -10px;
+            top: 68%;
+            transform: translate(-50%);
+            animation: cursor 1s infinite;
+          }
         }
       }
     }
