--- a/styles/pages/_about.scss
+++ b/styles/pages/_about.scss
@@ -31,9 +31,9 @@
   .paragraphe {
     display: flex;
     justify-content: space-evenly;
-    line-height: 22px;
+    line-height: 20px;
     word-spacing: 2px;
-    margin-top: 50px;
+    margin-top: 46px;
     color: #636363;
 
     .t-left,
@@ -48,7 +48,7 @@
         position: absolute;
         height: 70px;
         margin-top: 10px;
-        left: 20%;
+        left: 19%;
         width: 4px;
         background: #e74c3c;
         transform: rotate(90deg);
@@ -67,7 +67,7 @@
         position: absolute;
         height: 70px;
         margin-top: 10px;
-        right: 20%;
+        right: 19%;
         width: 4px;
         background: #e74c3c;
         transform: rotate(90deg);
@@ -82,13 +82,13 @@
     }
 
     .p-left {
-      width: 20%;
-      text-align: justify;
+      width: 24%;
+      text-align: center;
     }
 
     .p-right {
-      width: 20%;
-      text-align: justify;
+      width: 24%;
+      text-align: center;
     }
   }
 
